# ziggy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
example/: .gitignore  Cargo.toml  README.md
example/src/: main.rs
examples/arbitrary/: Cargo.toml  README.md
examples/arbitrary/src/: main.rs
examples/asan/: Cargo.toml  README.md
examples/asan/src/: main.rs
examples/cmplog/: Cargo.toml  README.md
examples/cmplog/src/: main.rs
examples/libfuzzer_c++/: CMakeLists.txt
examples/libfuzzer_c++/src/: harness.cpp
examples/partial/: Cargo.toml  allowlist.txt  blocklist.txt
examples/partial/src/: allowed.rs  blocked.rs  main.rs  other.rs
examples/segfault/: Cargo.toml
examples/segfault/src/: main.rs
examples/unstable/: Cargo.toml
examples/unstable/src/: main.rs
examples/url/: .gitignore  Cargo.toml  README.md  hello  url.dict
examples/url/corpus/: init
examples/url/src/: main.rs
examples/with_lazy_static/: .gitignore  Cargo.toml  README.md
examples/with_lazy_static/src/: main.rs
src/: lib.rs  libafl_fuzzer.rs
tests/: arbitrary_fuzz.rs  asan_fuzz.rs  unstable_fuzz.rs  url_fuzz.rs
