[package]
name = "ziggy"
version = "1.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A multi-fuzzer management utility for all of your Rust fuzzing needs 🧑‍🎤"
repository = "https://github.com/srlabs/ziggy/"

[workspace]
members = [
    ".",
    "examples/arbitrary",
    "examples/asan",
    "examples/url",
]

[dependencies]
afl = { version = "0.15.11", default-features = false, optional = true }
anyhow = { version = "1.0.83", optional = true }
cargo_metadata = { version = "0.18.1", optional = true }
clap = { version = "4.5.4", features = ["cargo", "derive", "env"], optional = true }
console = { version = "0.15.8", optional = true }
fork = { version = "0.1.23", optional = true }
glob = { version = "0.3.1", optional = true }
honggfuzz = { version = "0.5.56", optional = true }
libc = { version = "0.2.153", optional = true }
semver = { version = "1.0.23", optional = true }
strip-ansi-escapes = { version = "0.2.0", optional = true }
time-humanize = { version = "0.1.3", optional = true }
twox-hash = { version = "2.0.1", optional = true }

[features]
default = ["cli"]
cli = [
    "clap",
    "console",
    "glob",
    "semver",
    "anyhow",
    "strip-ansi-escapes",
    "libc",
    "time-humanize",
    "cargo_metadata",
    "twox-hash",
]
coverage = ["fork", "libc"]

[lints.clippy]
needless_doctest_main = "allow"
