[package]
name = "ziggy"
version = "1.3.5"
edition = "2021"
license = "Apache-2.0"
description = "A multi-fuzzer management utility for all of your Rust fuzzing needs 🧑‍🎤"
repository = "https://github.com/srlabs/ziggy/"

[workspace]
members = [".", "examples/arbitrary", "examples/asan", "examples/url"]

[features]
default = ["cli"]
cli = [
    "clap",
    "console",
    "glob",
    "semver",
    "anyhow",
    "strip-ansi-escapes",
    "libc",
    "time-humanize",
    "cargo_metadata",
    "twox-hash",
]
coverage = ["fork", "libc"]

[dependencies]
afl = { version = "0.17.0", default-features = false, optional = true }
anyhow = { version = "1.0.100", optional = true }
cargo_metadata = { version = "0.23.1", optional = true }
clap = { version = "4.5.54", features = ["cargo", "derive", "env"], optional = true }
console = { version = "0.16.2", optional = true }
fork = { version = "0.6.0", optional = true }
glob = { version = "0.3.3", optional = true }
honggfuzz = { version = "0.5.58", optional = true }
libc = { version = "0.2.179", optional = true }
semver = { version = "1.0.27", optional = true }
strip-ansi-escapes = { version = "0.2.1", optional = true }
time-humanize = { version = "0.1.3", optional = true }
twox-hash = { version = "2.1.2", optional = true }

[lints.clippy]
needless_doctest_main = "allow"
