[package]
name = "ziggy"
version = "1.6.1"
edition = "2024"
license = "Apache-2.0"
description = "A multi-fuzzer management utility for all of your Rust fuzzing needs 🧑‍🎤"
repository = "https://github.com/srlabs/ziggy/"

[workspace]
members = [".", "examples/arbitrary", "examples/asan", "examples/url"]

[[bin]]
name = "cargo-ziggy"
required-features = ["cli"]

[features]
default = ["cli"]
cli = [
    "anyhow",
    "cargo_metadata",
    "clap",
    "console",
    "glob",
    "indicatif",
    "libc",
    "rayon",
    "semver",
    "signal-hook",
    "strip-ansi-escapes",
    "target-triple",
    "tempfile",
    "time-humanize",
    "tokio",
    "twox-hash",
]
coverage = []

[dependencies]
afl = { version = "0.17.1", default-features = false, optional = true }
anyhow = { version = "1.0.102", optional = true }
cargo_metadata = { version = "0.23.1", optional = true }
clap = { version = "4.6.0", features = ["cargo", "derive", "env"], optional = true }
console = { version = "0.16.3", optional = true }
glob = { version = "0.3.3", optional = true }
honggfuzz = { version = "0.5.60", optional = true }
indicatif = { version = "0.18.4", optional = true }
libc = { version = "0.2.183", optional = true }
rayon = { version = "1.11.0", optional = true }
semver = { version = "1.0.27", optional = true }
signal-hook = { version = "0.4.3", optional = true }
strip-ansi-escapes = { version = "0.2.1", optional = true }
target-triple = { version = "1.0.0", optional = true }
tempfile = { version = "3.27.0", optional = true }
time-humanize = { version = "0.1.3", optional = true }
tokio = { version = "1.50.0", features = ["process", "rt", "time"], optional = true }
twox-hash = { version = "2.1.2", optional = true }

[lints.clippy]
needless_doctest_main = "allow"
